fixed bug of squares not wrapping on smaller phones

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ footer {
     margin-bottom: 30px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (orientation: portrait) {
     .square {
         width: 80vw;
         height: auto;
